[tool.poetry]
name = "errorlib"
version = "0.1.0"
description = ""
authors = ["Cody Auch <codyaauch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
pytermgui = "^6.1.0"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
